--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "coffee_page_vue",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/bookofbash/coffee-page-vue",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
@@ -22,6 +24,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-gh-pages": "^1.19.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
