--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "animate.css": "^3.7.2",
     "core-js": "^3.4.4",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3"
