--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "animate.css": "^3.7.2",
     "core-js": "^3.4.4",
+    "v-wow": "git+https://github.com/guisoares2011/vue-wow.git",
     "vue": "^2.6.11",
-    "vue-lazyload": "^1.3.3"
+    "vue-lazyload": "^1.3.3",
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
